fix admin panel gap

--- a/Themes/config-w3/1.0/css/adminpanel.css
+++ b/Themes/config-w3/1.0/css/adminpanel.css
@@ -334,3 +334,9 @@ body {
 iframe.editBar-iframe {
     display: none !important;
 }
+
+/* Neutralize DNN module pane wrapper padding */
+.w3-container.default.clearfix {
+    padding: 0 !important;
+    margin: 0 !important;
+}
